Revision history for DBIx-Class-InflateColumn-JSON2Object

0.905   2018-06-13T11:04:05
   - make sure Int/Nums are always returned as int/num in json (Thomas Klausner)
   - documented fixed_class (Thomas Klausner)


0.904   2017-05-29T09:12:17
    - specify 5.14 as minimum Perl version


0.903   2017-05-19T13:25:33
    - add array_of_class to store a list of objects of one class


0.902   2017-05-11T11:07:21
    - handle nested Objects (if they have proper types and coercions)


0.901   never released
    - coerce JSON boolean from undef (to false)


0.900   2017-01-31T15:31:31
    - added tests and docs
    - fixed boolean handling
    - also extraced from oe1 (Maroš Kollár)
    - extracted from Validad::Tools
