@@ -1,0 +1,33 @@
+# This file is generated by Dist::Zilla::Plugin::CPANFile v6.017
+# Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
+
+requires "Encode" => "0";
+requires "JSON::MaybeXS" => "0";
+requires "Module::Runtime" => "0";
+requires "Moose::Role" => "0";
+requires "Moose::Util::TypeConstraints" => "0";
+requires "Scalar::Util" => "0";
+requires "String::CamelCase" => "0";
+requires "perl" => "5.014";
+
+on 'build' => sub {
+  requires "Module::Build" => "0.28";
+};
+
+on 'test' => sub {
+  requires "DBI" => "0";
+  requires "DBIx::Class" => "0";
+  requires "DBIx::Class::Schema" => "0";
+  requires "File::Spec" => "0";
+  requires "File::Temp" => "0";
+  requires "IO::Handle" => "0";
+  requires "IPC::Open3" => "0";
+  requires "Moose" => "0";
+  requires "Test::More" => "0";
+  requires "base" => "0";
+  requires "lib" => "0";
+};
+
+on 'configure' => sub {
+  requires "Module::Build" => "0.28";
+};
