@@ -1,27 +1,7 @@
 name    = DBIx-Class-InflateColumn-JSON2Object
-author  = Thomas Klausner <domm@cpan.org>
+author  = Thomas Klausner <domm@plix.at>
 license = Perl_5
 copyright_holder = Thomas Klausner
-copyright_year   = 2017
+copyright_year   = 2017 - 2021
 
-[GatherDir]
-exclude_match = local
-[PruneCruft]
-[ManifestSkip]
-[MetaYAML]
-[MetaJSON]
-[License]
-[Readme]
-[Repository]
-[AutoPrereqs]
-[MetaResources]
-[CheckChangeLog]
-[Manifest]
-[TestRelease]
-[ConfirmRelease]
-[VersionFromModule]
-[ModuleBuild]
-[PodWeaver]
-[InstallGuide]
-[@Git]
-
+[@Author::DOMM]
